# Panther

./: .env.example  .gitignore  API_KEY_PERSISTENCE.md  BACKUP.md  BUILD_INSTRUCTIONS.md  LICENSE  MODEL_SELECTION_GUIDE.md  PROVIDER_BASE_URLS.md  README.md  SOURCE_README.txt  package-lock.json  package.json  vite.config.ts
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_disabled/logs/: HEAD
.github/workflows/: release.yml
Binary/: README.txt
docs/: ARCHITECTURE.md  CODEBASE_REFERENCE.MD  VOICE.md
scripts/: backup-project.ps1  build-production.ps1  copy-source-for-github.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  commands_auth.rs  commands_chat.rs  commands_cline.rs  commands_coder.rs  commands_coder_ide.rs  commands_debate.rs  commands_dependencies.rs  commands_import.rs  commands_local_gpt.rs  commands_ollama.rs  commands_privacy.rs  commands_profile.rs  commands_rag.rs  commands_settings.rs  commands_stats.rs  commands_training.rs  commands_voice.rs  commands_web.rs  commands_workspace.rs  debate_orchestrator.rs  http_server.rs  lib.rs  main.rs  native_agent.rs  orchestrator.rs  prompt_transform.rs  provider_resolver.rs  token_usage.rs  training_executor.rs  training_ingest.rs  types.rs  web_search.rs
src-tauri/src/cache/: mod.rs  training_cache.rs
src-tauri/src/cline/: agent_loop.rs  checkpoints.rs  context_builder.rs  error_monitor.rs  mod.rs
src-tauri/src/cline/tools/: ast_tool.rs  browser_tool.rs  mcp_tool.rs  mod.rs  search_tool.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/privacy/: context_compactor.rs  encryption.rs  mod.rs  pseudonym.rs  redaction.rs  sanitized_logger.rs
src-tauri/src/providers/: adapter_trait.rs  anthropic.rs  google.rs  grok.rs  local_http.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/rag/: mod.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/voice/: mod.rs  stt.rs  tts.rs
src/api/: index.ts
src/components/: AuthModal.tsx  ErrorBoundary.tsx  ExportChatModal.tsx  ExportModelModal.tsx  ImportTrainingDataModal.tsx  LoraTrainingModal.tsx  MenuBar.tsx  Notification.tsx  ResponseCard.tsx  TestConnectionModal.tsx  TrainingDataChat.tsx  VoiceInput.tsx  VoiceOutput.tsx  VoiceSettings.tsx  WebSearchModal.tsx
src/hooks/: useStreamingLLM.ts
src/i18n/: index.ts
src/pages/: AgentRuns.tsx  Coder.tsx  (+16 more)
(+8 files in other folders)
